--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -37,7 +37,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginLeft="14dp"
             android:layout_marginStart="14dp"
-            android:text="@string/edit" />
+            android:text="@string/edit"
+            android:onClick="goToCourses"/>
         <!--app:layout_constraintLeft_toLeftOf="parent"/>-->
 
 
