Slog ihop tidigare arbete med mitt egna.
Appen har nu TablesActivity (huvudaktivitet), OrdersActivity, CoursesActivity och KitchenActivity. Framsteg!

--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -30,7 +30,8 @@
         android:layout_marginRight="39dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="39dp" />
+        android:layout_marginTop="39dp"
+        android:onClick="goToKitchen"/>
 
     <Button
         android:id="@+id/button3"
