--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools = "http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,16 +8,28 @@
     tools:context =".CoursesActivity">
 
 
+
+
     <Button
         android:id="@+id/ButtonAdd"
-        android:layout_width="80dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/ButtonSubb"
+        android:layout_toStartOf="@+id/ButtonSubb"
+        android:text = "+"/>
+
+    <Button
+        android:id="@+id/ButtonSubb"
+        android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight ="true"
         android:layout_alignParentTop="true"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="Add" />
-
+        android:text = "-"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -33,6 +46,7 @@
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/ButtonAdd"
         android:layout_toStartOf="@+id/ButtonAdd" />
+
 
 
 </RelativeLayout>
