--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -31,6 +31,18 @@
         android:focusableInTouchMode="false"
         android:text = "-"/>
 
+    <Button
+        android:id="@+id/Special"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text = "*"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/counter"
+        android:layout_toStartOf="@+id/counter"
+        android:onClick ="toast"/>
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
