--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -50,14 +50,15 @@
         android:text="TextView"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <EditText
-        android:layout_width="80dp"
+    <TextView
         android:id="@+id/counter"
-        android:text=""
+        android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/ButtonAdd"
-        android:layout_toStartOf="@+id/ButtonAdd" />
+        android:layout_toStartOf="@+id/ButtonAdd"
+        android:paddingStart="10dp"
+        android:textSize="30sp" />
 
 
 
