--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -8,40 +8,41 @@
     tools:context =".CoursesActivity">
 
 
-
-
     <Button
         android:id="@+id/ButtonAdd"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/ButtonSubb"
         android:layout_toStartOf="@+id/ButtonSubb"
-        android:text = "+"/>
+        android:background="@null"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text="+" />
 
     <Button
         android:id="@+id/ButtonSubb"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentRight ="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:background="@null"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text = "-"/>
+        android:text="-" />
 
     <Button
         android:id="@+id/Special"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:text = "*"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/counter"
         android:layout_toStartOf="@+id/counter"
-        android:onClick ="toast"/>
+        android:background="@null"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:onClick="toast"
+        android:text="*" />
 
     <TextView
         android:id="@+id/textView2"
