--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -39,7 +39,6 @@
             android:layout_marginStart="14dp"
             android:text="@string/edit"
             android:onClick="goToCourses"/>
-        <!--app:layout_constraintLeft_toLeftOf="parent"/>-->
 
 
         <Button
@@ -52,7 +51,8 @@
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
             android:text="@string/clear_table"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:onClick="clearOrders"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
