Lade till spectext i KitchenActivity
Rätter har nu en spectext under sig om de har några speciella önskemål.

--- a/app/src/main/res/layout/kitchen_order_courses.xml
+++ b/app/src/main/res/layout/kitchen_order_courses.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="5">
 
     <TextView
         android:id="@+id/course_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_weight="3"
         android:textSize="20dp"
         android:text="PonnyP-patch-plättar" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/course_count"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_weight="1"
+        android:layout_centerVertical="true"
+        android:textSize="20dp"
+        android:text="x3"/>
+
+    <TextView
+        android:id="@+id/course_cooking_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="right"
         android:layout_marginRight="20dp"
         android:textSize="20dp"
         android:text="10 min" />
 
-</RelativeLayout>
+</LinearLayout>
