--- a/web/public_html/css/meny.css
+++ b/web/public_html/css/meny.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #D3D3D3;
 }
 
 li {
@@ -12,7 +12,7 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -20,5 +20,10 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+    background-color: #f2f2f2;
+}
+#text{
+    float: centre; 
+    height: 100%;
+    width: 100%;
 }
