Clearfunktion, fungerar inte helt då spec är hårdkodat

--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -42,7 +42,8 @@
         android:layout_marginRight="30dp"
 
         android:layout_marginStart="20dp"
-        android:text="R" />
+        android:text="R"
+        android:onClick="clearSpec"/>
 
 
 </LinearLayout>
