--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -42,7 +42,8 @@
         android:layout_marginLeft="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:onClick="goToInventory"/>
 
     <Button
         android:id="@+id/button4"
