--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,83 +9,95 @@
     tools:layout_editor_absoluteX="0dp">
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table1"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="39dp"
-        android:onClick="goToOrder"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table2"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="39dp"
-        android:onClick="goToKitchen"/>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table1"
+            android:layout_marginStart="39dp"
+            android:layout_marginLeft="39dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="39dp"
+            android:onClick="goToOrder"/>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table3"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table2"
+            android:layout_marginEnd="39dp"
+            android:layout_marginRight="39dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="39dp"
+            android:onClick="goToKitchen"/>
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table4"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table3"
+            android:layout_marginStart="39dp"
+            android:layout_marginLeft="39dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="31dp"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table5"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table4"
+            android:layout_marginEnd="39dp"
+            android:layout_marginRight="39dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="31dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table6"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table5"
+            android:layout_marginStart="39dp"
+            android:layout_marginLeft="39dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="31dp"
+            app:layout_constraintTop_toBottomOf="@+id/button3" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table7"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        android:layout_marginLeft="135dp"
-        android:layout_marginStart="135dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table6"
+            android:layout_marginEnd="39dp"
+            android:layout_marginRight="39dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="31dp"
+            app:layout_constraintTop_toBottomOf="@+id/button4" />
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="115dp"
+            android:layout_height="85dp"
+            android:text="@string/table7"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/button5"
+            android:layout_marginLeft="135dp"
+            android:layout_marginStart="135dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <ListView
+        android:id="@+id/navigation_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start" />
+
+</android.support.v4.widget.DrawerLayout>
