Inventerings sida med fixat fel och lista över hela skärmen.
Vi har gjort en ingrediens klass och en inventerings aktivitet med en adapter. Just nu är inventerings sidan bunden till button 3 på startsidan. FIxade crashen från förra commiten. Just nu går listan över hela skärmen

--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -16,19 +16,20 @@
         android:textColor="@color/colorBlack"
         />
 
-    <TextView
+    <EditText
         android:id="@+id/ingredient_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="35sp"
+        android:inputType="numberDecimal"
         />
 
     <TextView
         android:id="@+id/ingredient_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:textSize="35sp"
         />
 
