--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -12,6 +12,7 @@
         android:textSize="30sp"
         android:paddingLeft="5dp"
         android:paddingStart="5dp"
+        android:paddingBottom="10dp"
         android:layout_weight="3"
         android:textColor="@color/colorBlack"
         />
@@ -29,9 +30,16 @@
         android:id="@+id/ingredient_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="0.4"
         android:textSize="35sp"
         />
+
+    <Button
+        android:id="@+id/confrim_edit_ingredient"
+        android:layout_width="20dp"
+        android:layout_height="35dp"
+        android:layout_weight="0.6"
+        android:text="Penna"/>
 
     <Button
         android:id="@+id/edit_ingredient"
