--- a/web/public_html/css/design.css
+++ b/web/public_html/css/design.css
@@ -32,6 +32,12 @@
     overflow: hidden;
     
 }
+#footer{
+    
+    height: 100px;
+    width: 1000px;
+    background-color: #f2f2f2; 
+}
 
 *{
     margin: 0;
@@ -42,6 +48,7 @@
     vertical-align: baseline;
     background: transparent;
 }
+
 p{
     color: black;
     padding-left: 100px; 
