--- a/app/src/main/res/layout/activity_kitchen.xml
+++ b/app/src/main/res/layout/activity_kitchen.xml
@@ -8,8 +8,8 @@
 
     <ListView
         android:id="@+id/kitchen_list"
-        android:layout_width="368dp"
-        android:layout_height="503dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp">
     </ListView>
