--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -9,7 +9,7 @@
 
 
     <ListView
-        android:id="@+id/list_View"
+        android:id="@+id/courses_list"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
@@ -22,7 +22,7 @@
         android:scrollbars="vertical"> </ListView>
 
     <Button
-        android:id="@+id/ButtonSave"
+        android:id="@+id/courses_save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
