--- a/app/src/main/res/layout/courses_list_item.xml
+++ b/app/src/main/res/layout/courses_list_item.xml
@@ -9,19 +9,19 @@
 
 
     <Button
-        android:id="@+id/ButtonAdd"
+        android:id="@+id/courses_item_add_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/ButtonSubb"
-        android:layout_toStartOf="@+id/ButtonSubb"
+        android:layout_toLeftOf="@+id/courses_item_sub_button"
+        android:layout_toStartOf="@+id/courses_item_sub_button"
         android:background="@null"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text="+" />
 
     <Button
-        android:id="@+id/ButtonSubb"
+        android:id="@+id/courses_item_sub_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
@@ -32,35 +32,35 @@
         android:text="-" />
 
     <Button
-        android:id="@+id/Show_pop"
+        android:id="@+id/courses_item_spec_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/counter"
-        android:layout_toStartOf="@+id/counter"
+        android:layout_toLeftOf="@+id/courses_item_quantity"
+        android:layout_toStartOf="@+id/courses_item_quantity"
         android:text="*"
         android:background="@null"
         android:focusable="false"
-        android:onClick="Specpopup"
+        android:onClick="showSpecPopup"
         android:focusableInTouchMode="false"
         />
 
-
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/courses_item_course_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/counter"
+        android:id="@+id/courses_item_quantity"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/ButtonAdd"
-        android:layout_toStartOf="@+id/ButtonAdd"
+        android:layout_toLeftOf="@+id/courses_item_add_button"
+        android:layout_toStartOf="@+id/courses_item_add_button"
         android:paddingStart="10dp"
+        android:paddingLeft="10dp"
         android:textSize="30sp" />
 
 
