--- a/app/src/main/res/layout/courses_spec_popup.xml
+++ b/app/src/main/res/layout/courses_spec_popup.xml
@@ -9,27 +9,27 @@
     tools:context =".CoursesActivity" >
 
         <TextView
-            android:id="@+id/text_popup"
+            android:id="@+id/courses_popup_title"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:text="Lägg till/ta bort"
             android:textSize="22dp" />
 
         <EditText
-            android:id="@+id/pop"
+            android:id="@+id/courses_popup_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/text_popup"
+            android:layout_below="@+id/courses_popup_title"
             android:hint="Lägg till/ta bort" />
 
         <Button
-            android:id="@+id/close"
+            android:id="@+id/courses_popup_close_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="closePopup"
             android:text="Spara"
-            android:layout_below="@+id/pop"
+            android:layout_below="@+id/courses_popup_edittext"
             android:layout_centerHorizontal="true" />
 </RelativeLayout>
