--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -34,18 +34,20 @@
         android:textSize="35sp"
         />
 
-    <Button
+    <ImageButton
         android:id="@+id/confrim_edit_ingredient"
         android:layout_width="20dp"
         android:layout_height="35dp"
         android:layout_weight="0.6"
-        android:text="Penna"/>
+        android:background="@drawable/ic_mode_edit_black_24dp"
+        android:onClick="saveChangeInventory"/>
 
     <Button
         android:id="@+id/edit_ingredient"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_weight="1"
-        android:text="Edit"/>
+        android:text="Edit"
+        android:onClick="showIngredientPopupWindow"/>
 
 </LinearLayout>
