Iconer är inlagda på lite ställen så att appen blev finare

--- a/app/src/main/res/layout/courses_list_item.xml
+++ b/app/src/main/res/layout/courses_list_item.xml
@@ -31,15 +31,14 @@
         android:focusableInTouchMode="false"
         android:text="-" />
 
-    <Button
+    <ImageButton
         android:id="@+id/courses_item_spec_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/courses_item_quantity"
         android:layout_toStartOf="@+id/courses_item_quantity"
-        android:text="*"
-        android:background="@null"
+        android:background="@drawable/ic_star_border_black_24dp"
         android:focusable="false"
         android:onClick="showSpecPopup"
         android:focusableInTouchMode="false"
