--- a/app/src/main/res/layout/courses_spec_popup.xml
+++ b/app/src/main/res/layout/courses_spec_popup.xml
@@ -4,7 +4,7 @@
     android:id="@+id/popup"
     android:layout_width="300dp"
     android:layout_height="150dp"
-    android:background="@color/colorAccent"
+    android:background="@color/colorGrey"
     android:orientation="vertical"
     tools:context =".CoursesActivity" >
 
