--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -31,8 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.4"
-        android:textSize="35sp"
-        />
+        android:textSize="35sp" />
 
     <ImageButton
         android:id="@+id/confrim_edit_ingredient"
