--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -6,32 +6,31 @@
 
     <TextView
         android:id="@+id/order"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:paddingLeft="5dp"
         android:textColor="@color/colorBlack"
         />
 
-    <TextView
+    <ImageButton
         android:id="@+id/spec"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:text="**"
-        android:textSize="35sp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_star_black_24dp"
         />
     
-    <Button
+    <ImageButton
         android:id="@+id/trash"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="30dp"
         android:layout_marginStart="20dp"
-        android:text="R"
+        android:background="@drawable/ic_delete_black_24dp"
         android:onClick="clearSpec"/>
 
 
