--- a/app/src/main/res/layout/courses_list_item.xml
+++ b/app/src/main/res/layout/courses_list_item.xml
@@ -8,28 +8,26 @@
     tools:context =".CoursesActivity">
 
 
-    <Button
+    <ImageButton
         android:id="@+id/courses_item_add_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/courses_item_sub_button"
         android:layout_toStartOf="@+id/courses_item_sub_button"
-        android:background="@null"
+        android:background="@drawable/ic_add_black_24dp"
         android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:text="+" />
+        android:focusableInTouchMode="false" />
 
-    <Button
+    <ImageButton
         android:id="@+id/courses_item_sub_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:background="@null"
+        android:background="@drawable/ic_remove_black_24dp"
         android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:text="-" />
+        android:focusableInTouchMode="false" />
 
     <ImageButton
         android:id="@+id/courses_item_spec_button"
