Iconer tillagd i ktichen för att checka av

--- a/app/src/main/res/layout/kitchen_order.xml
+++ b/app/src/main/res/layout/kitchen_order.xml
@@ -31,13 +31,13 @@
             android:layout_marginRight="20dp"
             android:text="2 min"/>
 
-        <Button
+        <ImageButton
             android:id="@id/check_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentRight="true"
             android:onClick="removeOrder"
-            android:text="Checka av" />
+            android:background="@drawable/ic_check_black_24dp" />
 
     </RelativeLayout>
 
