--- a/app/src/main/res/layout-large/activity_kitchen.xml
+++ b/app/src/main/res/layout-large/activity_kitchen.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp"
+        android:horizontalSpacing="30dp"
         android:numColumns="2">
     </GridView>
 
