--- a/app/src/main/res/layout/courses_list_item.xml
+++ b/app/src/main/res/layout/courses_list_item.xml
@@ -44,7 +44,7 @@
 
     <TextView
         android:id="@+id/courses_item_course_name"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAppearance="?android:attr/textAppearanceLarge" />
