Fixat login som startsida.
Login "funkar" med mail/lösen som a/a, och man kommer till TableActivity när man skriver in det.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,5 @@
         android:text="Logga in"
         android:layout_marginTop="21dp"
         android:layout_below="@+id/password_login"
-        android:layout_centerHorizontal="true"
-        android:onClick ="goToTables"/>
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
