Gjorde om inventory popup till en klass.
Tog även bort funktionen som var bunden till radera knappen

--- a/app/src/main/res/layout/inventory_popup_remove.xml
+++ b/app/src/main/res/layout/inventory_popup_remove.xml
@@ -77,7 +77,6 @@
             android:layout_width="85dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:text="Ta bort"
-            android:onClick="deleteIngredient"/>
+            android:text="Ta bort" />
     </LinearLayout>
 </RelativeLayout>
