Icke-spec beställningar funkar nu
Det går nu att ta beställningar som inte är spec.

--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -28,6 +28,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Save"
-        android:onClick="goToOrder"/>
+        android:onClick="saveOrder"/>
 
 </RelativeLayout>
