--- a/app/src/main/res/layout/table_order.xml
+++ b/app/src/main/res/layout/table_order.xml
@@ -20,11 +20,9 @@
 
     <TextView
         android:id="@+id/quantity"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:gravity="center_horizontal"
+        android:gravity="right"
         android:text="x2"
         android:textSize="25sp" />
 
