--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -18,9 +18,11 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:background="@drawable/ic_star_black_24dp"
         />
-    
+
     <ImageButton
         android:id="@+id/trash"
         android:layout_width="30dp"
@@ -28,8 +30,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="30dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/ic_delete_black_24dp"
         android:onClick="clearSpec"/>
 
