--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -86,11 +86,11 @@
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table7"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="31dp"
         app:layout_constraintTop_toBottomOf="@+id/table5_button"
-        android:layout_marginLeft="135dp"
-        android:layout_marginStart="135dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:onClick="goToOrder"/>
+        android:onClick="goToOrder"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.501" />
 
 </android.support.constraint.ConstraintLayout>
