--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="se.miun.antonsskafferi.ScheduleActivity"
+    tools:context="se.miun.antonsskafferi.BookingActivity"
     android:orientation="vertical"
     android:id="@+id/schedule_layout"
     android:paddingRight="10dp"
