--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -10,16 +10,15 @@
         android:id="@+id/add_ingredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/round_button"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_gravity ="bottom|end"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="40dp"
         app:fabSize="normal"
         app:backgroundTint="@color/colorPaleRed"
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="showIngredientPopupWindow"
-        android:src="@android:drawable/ic_input_add"/>
+        android:src="@drawable/ic_add_black_24dp"/>
 
     <LinearLayout
         android:id="@+id/inventory_layout"
