--- a/app/src/main/res/layout/activity_courses.xml
+++ b/app/src/main/res/layout/activity_courses.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Save"
+        android:text="@string/save_button"
         android:onClick="saveOrder"/>
 
 </RelativeLayout>
