--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -35,7 +35,8 @@
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="8dp"
-            android:numColumns="1"></GridView>
+            android:numColumns="1">
+        </GridView>
 
     </LinearLayout>
 
