--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -144,7 +144,7 @@
         android:layout_height="match_parent"
         android:paddingTop="15dp"
         android:layout_weight="0.8"
-        android:text="Kök"
+        android:text="@string/kitchen"
         android:onClick="goToKitchen"/>
 
 
