--- a/app/src/main/res/layout/courses_spec_popup.xml
+++ b/app/src/main/res/layout/courses_spec_popup.xml
@@ -12,8 +12,8 @@
             android:id="@+id/courses_popup_title"
             android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:text="Lägg till/ta bort"
-            android:textSize="22dp" />
+            android:text="@string/add_remove"
+            android:textSize="22sp" />
 
         <EditText
             android:id="@+id/courses_popup_edittext"
@@ -22,7 +22,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/courses_popup_title"
-            android:hint="Lägg till/ta bort" />
+            android:hint="@string/add_remove" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:onClick="saveSpecial"
-                    android:text="Spara"/>
+                    android:text="@string/save_button"/>
 
                 <Button
                     android:id="@+id/courses_popup_close_button"
@@ -44,6 +44,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:onClick="closePopup"
-                    android:text="Avbryt" />
+                    android:text="@string/cancel_button" />
         </LinearLayout>
 </RelativeLayout>
