--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:paddingLeft="5dp"
-        android:paddingStart="5dp"
+        android:paddingLeft="5sp"
+        android:paddingStart="5sp"
         android:paddingBottom="10dp"
         android:layout_weight="3.5"
         android:textColor="@color/colorBlack"
