--- a/app/src/main/res/layout/inventory_popup_remove.xml
+++ b/app/src/main/res/layout/inventory_popup_remove.xml
@@ -10,13 +10,13 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textSize="22sp"
-        android:text="Redigera ingrediens:"/>
+        android:text="@string/change_ingridient"/>
 
     <EditText
         android:id="@+id/popup_add_ingredient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ingrediens"
+        android:hint="@string/ingridient_name"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/ingredient_popup_title"
         android:layout_alignParentLeft="true"
@@ -27,7 +27,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
-        android:text="Enhet:"
+        android:text="@string/unit"
         android:textSize="22sp"
         android:layout_marginBottom="5dp"
         android:layout_below="@+id/popup_add_ingredient"/>
@@ -46,7 +46,7 @@
         android:id="@+id/popup_add_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Antal"
+        android:hint="@string/quantity"
         android:layout_below="@+id/popup_spinner_unit"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -62,7 +62,7 @@
             android:layout_width="85dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:text="Spara"
+            android:text="@string/save_button"
             android:onClick="removePopupOnClick"/>
 
         <Button
@@ -70,7 +70,7 @@
             android:layout_width="85dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:text="Avbryt"
+            android:text="@string/cancel_button"
             android:onClick="removePopupOnClick"/>
 
         <Button
@@ -78,6 +78,6 @@
             android:layout_width="85dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
-            android:text="Ta bort" />
+            android:text="@string/remove_button"/>
     </LinearLayout>
 </RelativeLayout>
