--- a/app/src/main/res/layout/kitchen_order.xml
+++ b/app/src/main/res/layout/kitchen_order.xml
@@ -14,8 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textSize="30dp"
-            android:text="Bord 1" />
+            android:textSize="30sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,11 +24,10 @@
             android:id="@+id/came_in_minutes_ago"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_toLeftOf="@id/check_button"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:text="2 min"/>
+            android:layout_marginRight="20dp" />
 
         <ImageButton
             android:id="@id/check_button"
