--- a/app/src/main/res/layout/kitchen_order_courses_spec.xml
+++ b/app/src/main/res/layout/kitchen_order_courses_spec.xml
@@ -14,8 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:textSize="20dp"
-            android:text="PonnyP-patch-plättar" />
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/course_cooking_time"
@@ -23,8 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
-            android:textSize="20dp"
-            android:text="10 min" />
+            android:textSize="20sp"/>
     </RelativeLayout>
 
     <TextView
@@ -34,7 +32,6 @@
         android:layout_alignTop="@+id/course_spec_name_and_time"
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
-        android:textSize="20dp"
-        android:text="Utan lök"/>
+        android:textSize="20sp"/>
 
 </LinearLayout>
