Ännu en dunderpatch
Av P-p-p-p-p-ponny-p-p-p

Speed, momentum, violence.

--- a/webbsida/web/resources/css/designn.css
+++ b/webbsida/web/resources/css/designn.css
@@ -3,7 +3,11 @@
     height: 100%;
     width: 100%;
 }
-
+#header{
+    width: 800px;
+    height: 40px;
+    background-color: #666666;
+}
 
 #wrapper{
     background-color: #f2f2f2;
@@ -57,4 +61,29 @@ h1{
 h2{
     color: black;
     padding-left: 100px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
 }
